Landing Page 0.1, added Cat Chaos to Activity, fixing broken CSS

--- a/css/main.css
+++ b/css/main.css
@@ -253,10 +253,9 @@ body .main-content {
 
 .main-content img {
     border: 4px solid white;
-    transform: rotate(90deg);
     width: 250px;
-    height: 200px;
-    border-radius: 60%;
+    height: 250px;
+    border-radius: 50%;
 }
 
 .main-content p {
