--- a/pages/css/about.css
+++ b/pages/css/about.css
@@ -11,7 +11,6 @@
     body {
         height: 100%;
         padding-top: 100px;
-        background-image:url('whitebackground.jpg');
         background-repeat:no-repeat;    
         background-size:contain;
         background-position:center;
